began adding react-routing to the project

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,3 +20,7 @@
   --font-nunito: nunito, "sans-serif";
   --font-nunito-bold: nunito-bold, "sans-serif";
 }
+
+:root {
+  background-color: black;
+}
